# young-tista

./: .gitignore  README.md  model.txt  pyproject.toml  run-api.sh.example
young_tista/: ask.py  main.py
young_tista/api/: context.py  questions.py  shared.py  views.py  web.py
young_tista/api/models/: mongo.py
